started intro pass

--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -26,6 +26,9 @@
 \def\cvprPaperID{****} % *** Enter the CVPR Paper ID here
 \def\httilde{\mbox{\tt\raisebox{-.5ex}{\symbol{126}}}}
 
+% custom commands
+\newcommand{\scream}[1]{{\bf *** #1! ***}}
+
 % Pages are numbered in submission mode, and unnumbered in camera-ready
 %\ifcvprfinal\pagestyle{empty}\fi
 \setcounter{page}{1}
