--- a/intro.tex
+++ b/intro.tex
@@ -49,9 +49,9 @@ images has been targeted since the early days of computer
 vision~\cite{Lowe87}, but had largely been neglected in recent years
 in favor of 2D detectors based on robust local features and
 statistical learning techniques. Now, this problem is being revisited
-mostly due to two reasons: the availability of 3D CAD models for many
-object classes and the availability of robust image matching
-techniques.
+mostly due to two reasons: {\em (i)} the availability of 3D CAD models
+for many object classes and {\em (ii)} the availability of robust
+image matching techniques.
 %
 % performance object detectors usually generalizes very well. It
 % can handle various intraclass variability, viewpoint change and
@@ -86,28 +86,87 @@ techniques.
 % by rendering CAD models and creating 2D templates for various
 % viewpoints.
 
-Recent approaches to 2D-3D matching typically represent an object
-class as a collection of 3D exemplar models, which they render from a
+For (i), recent approaches to 2D-3D matching~\cite{Aubry14, Lim14}
+typically rely on a
+collection of 3D exemplar models, which they render from a
 large number of viewpoints. The resulting artifial images are then
 used to train exemplar models that can be matched to a real-world
 image at test time.
+%
+For (ii), it has been realized that template-based exemplar detectors
+based on HOG~\cite{Dalal05} features can be trained analytically, by
+replacing the standard SVM with an LDA classifier
+(E-LDA)~\cite{Hariharan12}. As a result, it is feasible to train
+hundreds of thousands of mid-level patch detectors for
+recognition~\cite{Aubry14}.
+%
+Unfortunately, the performance of E-LDA relies crucially on an
+additional calibration step that equalizes the detection scores of
+independently trained exemplar models. Since this step involves costly
+mining of hard negative examples~\cite{Dalal05,Felzenszwalb10} on a
+validation set, it constitutes the major computational bottleneck of
+E-LDA, limiting its scalability.
+
+In this paper, we propose a novel method for 2D-3D alignment of
+exemplar CAD models to real-world images that circumvents the need for
+calibration, and greatly enhances the scalability of E-LDA. As a
+result, we can render novel views and train corresponding exemplar
+models {\em on the fly}, without the need for offline processing. As a
+by-product, we can formulate the alignment problem as a parameter
+search in a continuos pose space, consisting of azimuth, elevation,
+and ~\scream{}, resulting in truely continuous pose estimates, which
+we implement using MCMC sampling.
+%  require a large number of rendering and 2D
+% templates for each of the CAD model with specific viewpoint. Since
+% there are so many templates that it becomes almost impossible to get
+% all the true positive image from training data. Instead \cite{Aubry14,
+%   Lim14} used whitening as a preprocessing stage \cite{Hariharan12} to
+% make templates more discriminative. Then calibration is done on a
+% small training dataset.
+%
+% Although whitening to create template is faster than some of
+% instance-level matching algorithms such as training Exemplar-SVM
+% \cite{Malisiewicz11} or complicated models such as LEVAN
+% \cite{Divvala14}, whitening and calibration large number of templates
+% takes very long time. Also, once the fixed discrete viewpoint
+% templates have been made and calibrated, it is difficult to fine-tune
+% the prediction made using the large collection of templates.
+
+Our paper makes the following specific contributions.
+
+First, we present a novel method for training exemplar models from
+rendered 3D CAD data {\em on the fly}, enabled by a novel variant of
+E-LDA, and making efficient use of the specific characteristics of
+rendered images. To our knowledge, our method constitutes the first
+attempt to simultanously render and train exemplar detectors on the
+fly.
+% In our paper, we present Non-Zero Whiten Histograms of Orientations
+% (NZ-WHO) to dramatically speed up the template generation and get rid
+% of time consuming calibration and yet achieves performance on par with
+% calibrated templates. First, we will present NZ-WHO is more
+% discriminative than WHO and introduce Conjugate Gradient method to
+% speed up the whitening and create a high resolution template in just
+% 80 milliseconds. Also, using this fast NZ-WHO template generation, we
+% present \textbf{on-the-fly} template generation to fine tune an
+% initial pose estimation to continuously refine translation, viewpoints
+% (yaw, roll, pitch) and focal length.
+
+Second, we show to enrich the output of an existing object class
+detector, such as the DPM~\cite{Felzenszwalb10} or the
+R-CNN~\cite{Girshick14} with additional 3D information, applying our
+method to candidate detections provided by the respective detector. As
+a result, we can refine the original detections with additional
+estimates of 3D continuos pose and a 3D CAD model exemplar.
+
+And third, we give an in-depth experimental study that demonstrates
+the effectiveness of our approach on a standard benchmark for
+object detection and viewpoint estimation~\cite{Xiang14}. 
 
 
-\cite{Aubry14, Lim14} require a large number of rendering and 2D
-templates for each of the CAD model with specific viewpoint. Since
-there are so many templates that it becomes almost impossible to get
-all the true positive image from training data. Instead \cite{Aubry14,
-  Lim14} used whitening as a preprocessing stage \cite{Hariharan12} to
-make templates more discriminative. Then calibration is done on a
-small training dataset.
 
-Although whitening to create template is faster than some of
-instance-level matching algorithms such as training Exemplar-SVM
-\cite{Malisiewicz11} or complicated models such as LEVAN
-\cite{Divvala14}, whitening and calibration large number of templates
-takes very long time. Also, once the fixed discrete viewpoint
-templates have been made and calibrated, it is difficult to fine-tune
-the prediction made using the large collection of templates.
+outperforming previous results on this dataset by considerable
+margins.
+
 
 
 %% Our contribution
@@ -116,16 +175,6 @@ rendering, we decided to analyze WHO feature
 [Find More Usage of WHO and CG rendering \cite{Pepik12}]
 
 
-In our paper, we present Non-Zero Whiten Histograms of Orientations
-(NZ-WHO) to dramatically speed up the template generation and get rid
-of time consuming calibration and yet achieves performance on par with
-calibrated templates. First, we will present NZ-WHO is more
-discriminative than WHO and introduce Conjugate Gradient method to
-speed up the whitening and create a high resolution template in just
-80 milliseconds. Also, using this fast NZ-WHO template generation, we
-present \textbf{on-the-fly} template generation to fine tune an
-initial pose estimation to continuously refine translation, viewpoints
-(yaw, roll, pitch) and focal length.
 
 
 Our pipeline is simple, fast only requires CAD models and no
