Modified table 1, filling out experiment section

--- a/egbib.bib
+++ b/egbib.bib
@@ -328,3 +328,13 @@ number={11},
 pages={2608-2623}, 
 doi={10.1109/TPAMI.2013.87}, 
 ISSN={0162-8828},}
+
+
+@INPROCEEDINGS{Lopez-Sastre11, 
+author={Lopez-Sastre, R.J. and Tuytelaars, T. and Savarese, S.}, 
+booktitle={Computer Vision Workshops (ICCV Workshops), 2011 IEEE International Conference on}, 
+title={Deformable part models revisited: A performance evaluation for object category pose estimation}, 
+year={2011}, 
+month={Nov}, 
+pages={1052-1059}, 
+doi={10.1109/ICCVW.2011.6130367},}
